deploy/openshift/overlays/prod/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mediacms-prod
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uwsgi
  namespace: mediacms-prod
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-short
  namespace: mediacms-prod
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-long
  namespace: mediacms-prod
spec:
  replicas: 2
