deploy/openshift/overlays/prod/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uwsgi
  namespace: mediacms-prod
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"
          limits:
            cpu: "4000m"
            memory: "4Gi"
