deploy/openshift/overlays/prod/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: mediacms-prod
spec:
  host: mediacms.apps.example.com
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
